# Zephyr-Study-Daily

./: .gitignore  README.md  README_EN.md
0_base/boards/opendev/opendev_esp32s3/: Kconfig.defconfig
0_base/src/: main.c
1_kconfig/: CMakeLists.txt  Kconfig  prj.conf
1_kconfig/.cache/clangd/index/: main.c.C2A354B15BFF1107.idx
1_kconfig/boards/opendev/opendev_esp32s3/: board.cmake  board.yml  opendev_esp32s3_procpu.yaml  opendev_esp32s3_procpu_defconfig
1_kconfig/src/: main.c  user_func.c  user_func.h
2_device_tree_basics/: CMakeLists.txt
2_device_tree_basics/dts/playground/: props-basics.overlay  props-phandle.overlay  props-phandles.overlay
2_device_tree_basics/src/: main.c
3_device_tree_semantics/: CMakeLists.txt  justfile
3_device_tree_semantics/.cache/clangd/index/: main.c.9308C4870B690A1D.idx
3_device_tree_semantics/boards/opendev/opendev_esp32s3/: Kconfig.opendev_esp32s3  opendev_esp32s3_procpu.dts
3_device_tree_semantics/dts/bindings/: custom,cells-a.yaml  custom,cells-b.yaml  custom,props-basics.yaml  custom,props-phandles.yaml
3_device_tree_semantics/dts/playground/: props-basics.overlay  props-phandles.overlay
3_device_tree_semantics/src/: main.c
4_device_tree_practice/: CMakeLists.txt  justfile  prj.conf
4_device_tree_practice/boards/: dnesp32s3b_esp32s3_procpu.overlay
4_device_tree_practice/src/: main.c
